[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/enemy1.gd" type="Script" id=1]
[ext_resource path="res://Other assets/enemy1.png" type="Texture" id=2]
[ext_resource path="res://Fonts/BloggerSans.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/BloggerSans_16.tres" type="DynamicFont" id=4]
[ext_resource path="res://Other assets/explosion.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Explode"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyCollision:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("enemy1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape_enemy:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnemyCollision:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("explosion:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("explosion:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 164.587
height = 66.5628

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3644, 2284 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 62.8227
height = 21.3617

[sub_resource type="GDScript" id=5]
script/source = "extends Container

var lvl_inside 

var pressed = false
# Called when the node enters the scene tree for the first time.

func _process(delta):
	if pressed:
		#lvl_inside = get_tree().get_current_scene()
		#get_tree().change_scene_to(lvl_inside)
		if lvl_inside == 1:
			get_tree().change_scene(\"res://Scenes/lvl1.tscn\")
		if lvl_inside == 2:
			print(\"2\")
			get_tree().change_scene(\"res://Scenes/Levels/lvl2.tscn\")
		if lvl_inside == 3:
			get_tree().change_scene(\"res://Scenes/Levels/lvl3.tscn\")
		if lvl_inside == 4:
			get_tree().change_scene(\"res://Scenes/Levels/lvl4_bugged.tscn\")
		if lvl_inside == 5:
			get_tree().change_scene(\"res://Scenes/Levels/lvl5.tscn\")

func _on_Retry_pressed():
	pressed = true


	
"

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 3 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Explode = SubResource( 1 )

[node name="enemy1" type="Sprite" parent="."]
scale = Vector2( 0.130372, 0.130372 )
texture = ExtResource( 2 )

[node name="explosion" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -20, -20 )
scale = Vector2( 1.16, 1.04 )
texture = ExtResource( 5 )
vframes = 2
hframes = 4

[node name="CollisionShape_enemy" type="CollisionShape2D" parent="."]
position = Vector2( 4, -4 )
rotation = -2.29012
scale = Vector2( 0.356694, 0.356694 )
shape = SubResource( 2 )

[node name="StartPosition" type="Area2D" parent="."]

[node name="CollisionShape_area_start" type="CollisionShape2D" parent="StartPosition"]
visible = false
position = Vector2( -4, 860 )
shape = SubResource( 3 )

[node name="EnemyCollision" type="Area2D" parent="."]
scale = Vector2( 1.16, 1.04 )

[node name="CollisionShape_area_enemyColision" type="CollisionShape2D" parent="EnemyCollision"]
position = Vector2( 4.76837e-07, 0 )
rotation = 0.816511
shape = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Mission_failed" type="Container" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Mission_failed"]
modulate = Color( 0, 0, 0, 0.686275 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -460.0
margin_top = -300.0
margin_right = 460.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Mission_failed"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -104.0
margin_right = 104.0
margin_bottom = -44.0
custom_fonts/normal_font = SubResource( 6 )
text = "Mission Failed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/Mission_failed"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -28.0
margin_right = 104.0
margin_bottom = 60.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Your spaceship is verry fragile. The hit distroied it and the mission was declared as failed."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="CanvasLayer/Mission_failed"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 216.0
margin_top = 204.0
margin_right = 412.0
margin_bottom = 260.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Retry"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 24, 876 )
scale = Vector2( 1, 1.56 )
polygon = PoolVector2Array( -3680, -1450, -3680, 1450 )
disabled = true
[connection signal="body_entered" from="StartPosition" to="." method="_on_StartPosition_body_entered"]
[connection signal="body_entered" from="EnemyCollision" to="." method="_on_EnemyCollision_body_entered"]
[connection signal="pressed" from="CanvasLayer/Mission_failed/Retry" to="CanvasLayer/Mission_failed" method="_on_Retry_pressed"]
